fix: secondary button color + header alignment

--- a/components/layout/header/header.module.scss
+++ b/components/layout/header/header.module.scss
@@ -13,7 +13,7 @@
 }
 
 .mainnav {
-	@apply flex space-x-10;
+	@apply flex space-x-10 items-center;
 }
 
 .navelements {
