--- a/components/partial/button/btn.module.scss
+++ b/components/partial/button/btn.module.scss
@@ -6,5 +6,5 @@
 }
 
 .secondary {
-	@apply bg-skin-bg text-skin-base border-2 border-solid border-red-500;
+	@apply bg-skin-bg text-skin-base border-2 border-solid border-brand;
 }
